@@ -1,5 +1,4 @@
 package com.rashmita.isoservice.service.impl;
-
 import com.rashmita.commoncommon.model.SettlementRequest;
 import com.rashmita.commoncommon.model.TransactionRequest;
 import com.rashmita.isoservice.entity.BankMoney;
@@ -13,7 +12,6 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
@@ -89,42 +87,44 @@ public class BankIsoServiceImpl implements BankIsoService {
             throw new IllegalStateException("Insufficient balance in account number: " + request.getAccountNumber());
         }
         bankAccount.setTransferAmount(totalTransfer);
-        bankAccount.setTotalBalance(currentBalance.subtract(totalTransfer));
+        bankAccount.setTotalBalance(currentBalance.add(totalTransfer));
         bankMoneyRepository.save(bankAccount);
         settlementDetailRepository.saveAll(settlementDetails);
         log.info(" Successfully Settled {} transactions. Total transferred: {} from account {}",
                 settlementDetails.size(), totalTransfer, request.getAccountNumber());
     }
-    public void isoPrepayment(TransactionRequest request){
-    String toAccount = "ACC10001";
-    BankMoney bankAccount = bankMoneyRepository.findByAccountNumber(toAccount)
-            .orElseThrow(() -> new IllegalArgumentException("Bank account not found: " + toAccount));
-    BigDecimal totalTransfer = BigDecimal.ZERO;
-    List<TransactionDetail> transactionDetails = new ArrayList<>();
-        for (var t : request.getTransactions()) {
-            BigDecimal amount = BigDecimal.valueOf(t.getAmount());
-            totalTransfer = totalTransfer.add(amount);
-            TransactionDetail detail = new TransactionDetail();
-            detail.setLoanNumber(request.getLoanNumber());
-            detail.setTransactionId(request.getTransactionId());
-            detail.setToAccount(toAccount);
-            detail.setAccountNumber(t.getAccountNumber());
-            detail.setTransferAmount(amount);
-            detail.setParticularRemarks(t.getParticularRemarks());
-            detail.setValueDate(t.getValueDate());
-            detail.setTotalAmount(amount);
-            detail.setStatus("Success");
-            transactionDetails.add(detail);
-    }
-        BigDecimal currentBalance = BigDecimal.valueOf(request.getTransactions().get(0).getAmount());
-        if (currentBalance.compareTo(totalTransfer) < 0) {
-            throw new IllegalStateException("Insufficient balance in account number: " + request.getTransactions().get(0).getAccountNumber());
+    public void isoPrepayment(TransactionRequest request) {
+        String toAccount = "ACC10001";
+        BankMoney bankAccount = bankMoneyRepository.findByAccountNumber(toAccount)
+                .orElseThrow(() -> new IllegalArgumentException("Bank account not found: " + toAccount));
+            BigDecimal totalTransfer = BigDecimal.ZERO;
+            List<TransactionDetail> transactionDetails = new ArrayList<>();
+            for (var t : request.getTransactions()) {
+                BigDecimal amount = BigDecimal.valueOf(t.getAmount());
+                totalTransfer = totalTransfer.add(amount);
+                TransactionDetail detail = new TransactionDetail();
+                detail.setLoanNumber(request.getLoanNumber());
+                detail.setFromAccount(request.getTransactions().getFirst().getAccountNumber());
+                detail.setTransactionId(request.getTransactionId());
+                detail.setToAccount(toAccount);
+                detail.setAccountNumber(t.getAccountNumber());
+                detail.setTransferAmount(amount);
+                detail.setParticularRemarks(t.getParticularRemarks());
+                detail.setValueDate(t.getValueDate());
+                detail.setTotalAmount(amount);
+                detail.setStatus("Success");
+                transactionDetails.add(detail);
+            }
+            BigDecimal currentBalance = BigDecimal.valueOf(request.getTransactions().get(0).getAmount());
+            if (currentBalance.compareTo(totalTransfer) < 0) {
+                throw new IllegalStateException("Insufficient balance in account number: " + request.getTransactions().get(0).getAccountNumber());
+            }
+            bankAccount.setTransferAmount(totalTransfer);
+            bankAccount.setTotalBalance(currentBalance.add(totalTransfer));
+            bankMoneyRepository.save(bankAccount);
+            transactionDetailRepository.saveAll(transactionDetails);
+            log.info(" Successfully Settled {} transactions. Total transferred: {} ",
+                    transactionDetails.size(), totalTransfer);
         }
-        bankAccount.setTransferAmount(totalTransfer);
-        bankAccount.setTotalBalance(currentBalance.subtract(totalTransfer));
-        bankMoneyRepository.save(bankAccount);
-        transactionDetailRepository.saveAll(transactionDetails);
-        log.info(" Successfully Settled {} transactions. Total transferred: {} ",
-                transactionDetails.size(), totalTransfer);
     }
-}
+
